--- a/src/app/routes/util/rf-configuration/rf-configuration.component.html
+++ b/src/app/routes/util/rf-configuration/rf-configuration.component.html
@@ -81,6 +81,20 @@
                       </nz-form-item>
                   </div> 
                 </div>
+                <div nz-row [nzGutter]="24">
+                  
+                    <div nz-col [nzSpan]="12">
+                        <nz-form-item nzFlex> 
+                        <nz-form-control [nzSpan]="16">
+                            <nz-input-group nzSize="large">
+                            <label nz-checkbox [(ngModel)]="currentRFConfiguration.pickToShipStage">
+                                <span>{{ 'pickToShipStage' | i18n }}</span>
+                            </label> 
+                            </nz-input-group>
+                        </nz-form-control>
+                        </nz-form-item>
+                    </div> 
+                  </div>
         </nz-card>
         
         <nz-card nzTitle="{{ 'configuration' | i18n}}">
